--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,8 @@
     "server:dev": "nodemon server.js",
     "seeds": "mongo < db/seeds.js"
   },
-  "dependences": {
+  "dependencies": {
     "body-parser": "^1.19.0",
-    "core-js": "^2.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.3.2"
